{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 68,
  "lineage": "2456c8d1-9a82-138a-f6b9-e0aec1ea508e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "groupone-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:internet-gateway/igw-0c83573396adeb7d8",
            "id": "igw-0c83573396adeb7d8",
            "owner_id": "862686223907",
            "tags": {
              "Name": "groupone-ig"
            },
            "tags_all": {
              "Name": "groupone-ig"
            },
            "vpc_id": "vpc-0e56e4441e96f2809"
          },
          "dependencies": [
            "aws_vpc.groupone-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "groupone-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:route-table/rtb-0a84ee679a584f1b1",
            "id": "rtb-0a84ee679a584f1b1",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c83573396adeb7d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e56e4441e96f2809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.groupone-ig",
            "aws_vpc.groupone-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "groupone-application-deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:vpc/vpc-0e56e4441e96f2809",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-0c66deabe6acad39c",
            "default_route_table_id": "rtb-04e4394ca407ae593",
            "default_security_group_id": "sg-0992e24fd28ee080e",
            "dhcp_options_id": "dopt-045c883b8dbab99d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e56e4441e96f2809",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e4394ca407ae593",
            "owner_id": "862686223907",
            "tags": {
              "Name": "groupone-application-deployment-vpc"
            },
            "tags_all": {
              "Name": "groupone-application-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "groupone-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7ba1163c2ad6f8",
            "route_table_id": "rtb-0a84ee679a584f1b1",
            "subnet_id": "subnet-0d4001db90e0f130e"
          },
          "dependencies": [
            "aws_internet_gateway.groupone-ig",
            "aws_route_table.groupone-rt",
            "aws_vpc.groupone-application-deployment",
            "module.application-tier.aws_subnet.groupone-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "groupone-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:security-group/sg-0cafc8093f72274ce",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cafc8093f72274ce",
            "ingress": [],
            "name": "groupone-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "groupone-app-sg"
            },
            "tags_all": {
              "Name": "groupone-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e56e4441e96f2809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groupone-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4147867081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cafc8093f72274ce",
            "security_group_rule_id": "sgr-05e1377946a8d349e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groupone-application-deployment",
            "module.application-tier.aws_security_group.groupone-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "137.22.176.66/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3004286984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cafc8093f72274ce",
            "security_group_rule_id": "sgr-0875bc2723fe42db6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groupone-application-deployment",
            "module.application-tier.aws_security_group.groupone-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "groupone-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:subnet/subnet-0d4001db90e0f130e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.15.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4001db90e0f130e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "groupone-app"
            },
            "tags_all": {
              "Name": "groupone-app"
            },
            "vpc_id": "vpc-0e56e4441e96f2809"
          },
          "dependencies": [
            "aws_vpc.groupone-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "groupone-db-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f911e2342e0d989",
            "route_table_id": "rtb-04e4394ca407ae593",
            "subnet_id": "subnet-0e9c23d0a3c00234e"
          },
          "dependencies": [
            "aws_vpc.groupone-application-deployment",
            "module.db-tier.aws_subnet.groupone-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "groupone-sg-db-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:security-group/sg-0c496b2e5baf32843",
            "description": "Allow all inbound traffric",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c496b2e5baf32843",
            "ingress": [],
            "name": "groupone-database-db-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "groupone-database-sg"
            },
            "tags_all": {
              "Name": "groupone-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e56e4441e96f2809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groupone-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.15.0.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-136405347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c496b2e5baf32843",
            "security_group_rule_id": "sgr-0cfbb48042f6b003d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groupone-application-deployment",
            "module.db-tier.aws_security_group.groupone-sg-db-group"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "groupone-db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:subnet/subnet-0e9c23d0a3c00234e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.15.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9c23d0a3c00234e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "groupone-database-db-subnet"
            },
            "tags_all": {
              "Name": "groupone-database-db-subnet"
            },
            "vpc_id": "vpc-0e56e4441e96f2809"
          },
          "dependencies": [
            "aws_vpc.groupone-application-deployment"
          ]
        }
      ]
    }
  ]
}